# celox

./: .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld
celox/: celox.c
celox/include/: types.h  vga.h
celox/src/: celox.c  entry.asm  multiboot2.asm  vga.c
disk/boot/grub/: grub.cfg
